--- a/styles/reset.css
+++ b/styles/reset.css
@@ -7,13 +7,8 @@
     font-stretch: normal;
     font-family: 'IBM Plex Sans', sans-serif;
 }
-
 html {
     scroll-behavior: smooth;
-}
-
-body {
-    max-width: 100vw;
 }
 
 h1, h2, h3 {
@@ -25,19 +20,40 @@ h1, h2, h3 {
 :root {
 --blanco: #fff;
 --negro: #000;
---azul: #C7E8F3; /* Columbia Blue */
---lila: #BF9ACA; /* Lilac */
---lilaoscuro: #8E4162; /* Twilight Lavender */
---gris: #41393E; /* Black Coffee */
---rosa: #EDA2C0; /* Amaranth Pink */
+--azul: #C7E8F3;
+--lila: #BF9ACA;
+--gris: #41393E;
 }
 
-nav, section, footer {
-    width: 100%;
+/* scroll bar style source: https://css-tricks.com/ */
+
+/* para Mozilla Firefox*/
+
+html {
+    scrollbar-color: #666 #201c29;
 }
 
-section div img {
-    width: 10%;
+/* ancho */
+::-webkit-scrollbar {
+    width: 16px;
+    height: 16px;
+}
+  
+/* color de (track) barra por donde se desliza el handle */
+::-webkit-scrollbar-track {
+    background: linear-gradient(90deg,#434343,#434343 1px,#111 0,#111);
+}
+   
+/* handle */
+::-webkit-scrollbar-thumb {
+    background: #434343;
+    border-radius: 16px;
+    box-shadow: inset 2px 2px 2px hsla(0,0%,100%,.25),inset -2px -2px 2px rgba(0,0,0,.25);
+}
+  
+/* handle en hover */
+::-webkit-scrollbar-thumb:hover {
+    opacity: 0.5;
 }
 
 /* MQ TABLET */
