--- a/styles/services.css
+++ b/styles/services.css
@@ -1,6 +1,5 @@
 section.services {
     height: 100vh;
-    padding: 5vh;
     background-color: var(--gris);
     border-bottom: 1px solid var(--blanco);
 }
@@ -8,92 +7,182 @@ section.services {
 section.services div.container {
     height: 100%;
     display: grid;
-    grid-template-columns: 20% 20% 20% 20% 20%;
+    grid-template-columns: 25% 25% 25% 25%;
+    padding: 2.5vh;
 }
 
 section.services div.container h2 {
     text-align: center;
     color: var(--blanco);
-    grid-column: 1 / span 5;
-}
-
-section.services div.container div.img1 {
-    border-radius: 12px;
-    grid-column-start: 1;
-    grid-column-end: 4;
-}
-
-section.services div.container div.noimg1 {
-    border-radius: 12px;
-    grid-column-start: 4;
-    grid-column-end: 6;
-}
-
-section.services div.container div.img2 {
-    border-radius: 12px;
-    grid-column-start: 3;
-    grid-column-end: 6;
-}
-
-section.services div.container div.noimg2 {
-    border-radius: 12px;
-    grid-column-start: 1;
-    grid-column-end: 3;
+    grid-column: 1 / span 4;
 }
 
 section.services div.container div img {
     width: 100%;
-    height: auto;
+    border-radius: 12px;
 }
 
 section.services img:hover {
     opacity: 0.5;
 }
 
+section.services div.container div.img1 {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    margin-right: 2.5vh;
+}
+
+section.services div.container div.noimg1 {
+    border-radius: 12px;
+    grid-column-start: 3;
+    grid-column-end: 5;
+    background-color: var(--blanco);
+    box-shadow: 4px 4px 4px 4px rgb(0,0,0,0.3);
+    padding: 0.25rem;
+    height: 75%;
+}
+
+section.services div.container div.noimg2 {
+    border-radius: 12px;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    background-color: var(--blanco);
+    box-shadow: 4px 4px 4px 4px rgb(0,0,0,0.3);
+    padding: 0.25rem;
+    height: 80%;
+
+}
+
+section.services div.container div.img2 {
+    grid-column-start: 3;
+    grid-column-end: 5;
+    margin-left: 2.5vh;
+}
+
+
 section.services div.container div h3 {
     text-align: center;
     color: var(--lila);
-    font-size: 0.85rem;
+    font-size: 0.65rem;
 }
 
 section.services div.container div p {
     text-align: center;
-    color: var(--blanco);
-    font-size: 0.85rem;
-    padding: 0.75rem;
+    color: var(--gris);
+    font-size: 0.65rem;
+    margin-top: 20px;
 }
 
 /* MQ TABLET */
 
 @media (min-width: 650px) and (max-width: 992px) {
+    section.services div.container {
+        grid-template-columns: 20% 20% 20% 20% 20%;
+        justify-items: center;
+        align-items: center;
+        padding: 0;
+    }
+    
+    section.services div.container h2 {
+        grid-column: 1 / span 5;
+    }
+
+    section.services div.container div {
+        grid-column: 1 / span 5;
+        width: 75%;
+    }
+    
+    section.services div.container div.img1 {
+        grid-column-start: 1;
+        grid-column-end: 4;
+        margin: 0;
+        text-align: center;
+    }
+    
+    section.services div.container div.noimg1 {
+        grid-column-start: 4;
+        grid-column-end: 6;
+        padding: 0.75rem;
+        height: 75%;
+    }
+    
+    section.services div.container div.noimg2 {
+        grid-column-start: 1;
+        grid-column-end: 3;
+        padding: 0.75rem;
+        height: 80%;
+    
+    }
+    
+    section.services div.container div.img2 {
+        grid-column-start: 3;
+        grid-column-end: 6;
+        margin: 0;
+    }
+    
     section.services div.container div h3 {
         font-size: 1rem;
-        padding: 1rem;
     }
     
     section.services div.container div p {
-        font-size: 1rem;
-        padding: 1rem;
-    }
-    section.services div.container div.img1, section.services div.container div.img2 {
-        padding: 1.5rem;
+        font-size: 0.9rem;
+        margin-top: 30px;
     }
 }
 
 /* MQ PC */
   
 @media (min-width: 993px) {
+    section.services div.container {
+        grid-template-columns: 20% 20% 20% 20% 20%;
+        justify-items: center;
+        align-items: center;
+        padding: 0;
+    }
+    
+    section.services div.container h2 {
+        grid-column: 1 / span 5;
+    }
+
+    section.services div.container div {
+        grid-column: 1 / span 5;
+        width: 60%;
+    }
+    
+    section.services div.container div.img1 {
+        grid-column-start: 1;
+        grid-column-end: 4;
+        margin: 0;
+        text-align: center;
+    }
+    
+    section.services div.container div.noimg1 {
+        grid-column-start: 4;
+        grid-column-end: 6;
+        padding: 1.25rem;
+        height: 80%;
+    }
+    
+    section.services div.container div.noimg2 {
+        grid-column-start: 1;
+        grid-column-end: 3;
+        padding: 1.25rem;
+        height: 80%;
+    
+    }
+    
+    section.services div.container div.img2 {
+        grid-column-start: 3;
+        grid-column-end: 6;
+        margin: 0;
+    }
+    
     section.services div.container div h3 {
         font-size: 1.25rem;
-        padding: 1rem;
     }
     
     section.services div.container div p {
         font-size: 1rem;
-        padding: 1rem;
-    }
-    section.services div.container div.img1, section.services div.container div.img2 {
-        width: 50%;
-        margin: auto;
+        margin-top: 30px;
     }
 }
