--- a/styles/figures.css
+++ b/styles/figures.css
@@ -1,6 +1,7 @@
 section.figures {
     height: 100vh;
     padding: 5vh;
+    background-color: var(--blanco);
 }
 
 section.figures div.container {
@@ -43,41 +44,44 @@ section.figures div.container div.box i.fa-space-shuttle {
 
 section.figures div.container div.box div {
     border: 2px solid var(--azul);
-    width: 82px;
-    height: 82px;
+    width: 84px;
+    height: 84px;
     color: var(--azul);
     text-align: center;
     position: absolute;
-    padding: 0.125rem;
+    padding: 0.0625rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 section.figures div.container div.box div.arribaizquierda {
     top: 20%;
-    left: 10%;
+    left: 15%;
 }
 
 section.figures div.container div.box div.arribaderecha {
     top: 20%;
-    right: 10%;
+    right: 15%;
 }
 
 section.figures div.container div.box div.abajoizquierda {
     bottom: 20%;
-    left: 10%;
+    left: 15%;
 }
 
 section.figures div.container div.box div.abajoderecha {
     bottom: 20%;
-    right: 10%;
+    right: 15%;
 }
 
 section.figures div.container div.box div i {
-    font-size: 0.65rem;
-    margin-bottom: 0.65rem;
+    font-size: 0.7rem;
 }
 
 section.figures div.container div.box div p {
-    font-size: 0.65rem;
+    font-size: 0.7rem;
 }
 
 /* animaciones */
@@ -187,5 +191,12 @@ img[src="star.svg"] {
     section.figures div.container div.box div.abajoderecha {
         bottom: 15%;
         right: 25%;
+    }
+}
+
+@media (min-width: 1280px) {
+    section.figures {
+        width: 1280px;
+        margin: 0 auto;
     }
 }
