hidehost.css removed, code indented

--- a/styles/contact.css
+++ b/styles/contact.css
@@ -106,7 +106,7 @@ section.contact div.content div.contact-info li {
     section.contact {
         padding: 15vh;
     }
-    
+
     section.contact h2 {
         margin-bottom: 5vh;
     }
@@ -114,16 +114,16 @@ section.contact div.content div.contact-info li {
     section.contact div.content div.contact-form {
         grid-column: 1 / 4;
     }
-    
+
     section.contact div.content div.contact-info {
         grid-column: 4 / 6;
     }
-    
+
     section.contact div.content div.contact-info p {
         margin-top: 1rem;
         font-size: .8rem;
     }
-    
+
     section.contact div.content div.contact-info li {
         margin-top: 1rem;
         font-size: .8rem;
@@ -131,17 +131,20 @@ section.contact div.content div.contact-info li {
 }
 
 /* MQ PC */
-  
+
 @media (min-width: 993px) {
-    section.contact div.content div.contact-form form p, section.contact input,
-    section.contact textarea, section.contact button {
+
+    section.contact div.content div.contact-form form p,
+    section.contact input,
+    section.contact textarea,
+    section.contact button {
         font-size: 1.125rem;
     }
 
     section.contact div.content div.contact-info p {
         font-size: 1.125rem;
     }
-    
+
     section.contact div.content div.contact-info li {
         font-size: 1.125rem;
     }
